@@ -1,3 +1,10 @@
+2007-09-07  Srinivasa Ragavan  <sragavan@novell.com>
+	
+	** Fix for bug #295622 (Novell Bugzilla)
+
+	* addressbook/e-book-backend-gal.c: (gal_reconnect),
+	(start_book_view): Reconnect if the ldap is null.
+
 2007-09-06  Srinivasa Ragavan  <sragavan@novell.com>
 
 	** Fix for bug#308057 (Novell Bugzilla)
